# tumorCode-release

./: README.md
tumorWithNecroticCore/: CMakeLists.txt
tumorWithNecroticCore/include/: BoundaryInclusionCheck.h  CartesianGridAndControlPoints.h  CubicSpline.h  Domains.h  ExtractBoundaryData.h  FreeBoundaryModel.h  InterfaceBvpSolver.h  Product.h  QR.h  TangentialDerivatives.h
tumorWithNecroticCore/src/: CartesianGridAndControlPoints.cpp  ExtractBoundaryData.cpp  ExtractBoundaryPoints.cpp  FastAlgorithm.cpp  FreeBoundaryModel.cpp  InterfaceBvpSolver.cpp  NormalDerivative.cpp  PrimalDualAlgorithm.cpp  test.cpp
tumorWithNecroticCoreEmergence/include/: BirkoffInterpolation.h  CartesianGridAndControlPoints0.h  Config.h  Const.h  ExtractBoundaryPoints.h  FastAlgorithm.h  FreeBoundaryModel.h  GMRES.h  InterfaceBvpSolver.h  LinearAlgebra.h  MHelmholtzSolver.h  Norm.h  NormalDerivative.h  PoissonSolver.h  PrimalDualAlgorithm.h  ThomasAlgorithm.h
tumorWithNecroticCoreEmergence/src/: BirkoffInterpolation.cpp  CartesianGridAndControlPoints0.cpp  Config.cpp  ExtractBoundaryPoints.cpp  FreeBoundaryModel.cpp  GMRES.cpp  InterfaceBvpSolver.cpp  (+7 more)
tumorWithoutNecroticCore/: CMakeLists.txt
tumorWithoutNecroticCore/include/: CartesianGridAndControlPoints.h  CleanFiles.h  CubicSpline.h  Domains.h  FastAlgorithm.h  FreeBoundaryModel.h  Householder.h  LU.h  LinearAlgebra.h  MHelmholtzSolver.h  NormalDerivative.h  PoissonSolver.h
tumorWithoutNecroticCore/src/: CartesianGridAndControlPoints.cpp  FastAlgorithm.cpp  FreeBoundaryModel.cpp  LinearAlgebra.cpp  MHelmholtzSolver.cpp  NormalDerivative.cpp  PoissonSolver.cpp  test.cpp
